--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,1 +1,23 @@
-<p>login works!</p>
+<mat-card>
+  <mat-card-content>
+    <form (ngSubmit)="onSubmit()">
+      <h2>Log In</h2>
+      <mat-form-field appearance="fill">
+        <mat-label>Username</mat-label>
+        <input [(ngModel)]="username" name="username" matInput type="text" />
+      </mat-form-field>
+
+      <mat-form-field appearance="fill">
+        <mat-label>Password</mat-label>
+        <input
+          [(ngModel)]="password"
+          name="password"
+          matInput
+          type="password"
+        />
+      </mat-form-field>
+
+      <button type="submit" mat-flat-button color="primary">Login</button>
+    </form>
+  </mat-card-content>
+</mat-card>
