--- a/src/app/components/coins/coins.component.html
+++ b/src/app/components/coins/coins.component.html
@@ -1,1 +1,11 @@
-<p>coins works!</p>
+<h1>Logged in as {{ loggedInAs }}</h1>
+
+<button (click)="onLogout()" mat-raised-button color="primary">Logout</button>
+
+<button (click)="addCoin()" mat-raised-button color="primary">Add coin</button>
+
+<mat-tab-group>
+  <mat-tab *ngFor="let coin of coins" [label]="coin.name"></mat-tab>
+  <mat-tab label="+"></mat-tab>
+  <button mat-raised-button color="primary">Login</button>
+</mat-tab-group>
