Dialog actions fixed

--- a/src/app/components/coins/add-coin/add-coin.component.html
+++ b/src/app/components/coins/add-coin/add-coin.component.html
@@ -6,8 +6,8 @@
     </mat-option>
   </mat-select>
 </mat-form-field>
-<mat-dialog-actions>
-  <button class="cancel" (click)="cancel()" mat-raised-button>Cancel</button>
+<mat-dialog-actions class="actions">
+  <button (click)="cancel()" mat-raised-button>Cancel</button>
   <button (click)="addCoin()" mat-raised-button color="primary">
     Add coin
   </button>
