--- a/src/app/components/coins/coins.component.html
+++ b/src/app/components/coins/coins.component.html
@@ -11,8 +11,40 @@
     Add coin
   </button>
 
-  <mat-tab-group>
-    <mat-tab *ngFor="let coin of coins" [label]="coin"></mat-tab>
+  <mat-tab-group (selectedTabChange)="(onSelect)">
+    <mat-tab *ngFor="let coinId of coinIds" [label]="coinId">
+      <div class="header">
+        <form class="header">
+          <mat-form-field appearance="fill">
+            <mat-label>US Dollar</mat-label>
+            <input
+              [(ngModel)]="usdValue"
+              name="usdValue"
+              matInput
+              type="number"
+              (change)="usdValueChanged()"
+            />
+          </mat-form-field>
+
+          <mat-form-field appearance="fill">
+            <mat-label>{{ selectedCoin.name }}</mat-label>
+            <input
+              [(ngModel)]="coinValue"
+              name="coinValue"
+              matInput
+              type="number"
+              (change)="coinValueChanged()"
+            />
+          </mat-form-field>
+        </form>
+        <button (click)="removeCoin(coinId)" mat-raised-button color="accent">
+          Remove
+        </button>
+      </div>
+
+      <!-- grafikon -->
+
+    </mat-tab>
     <mat-tab label="+"></mat-tab>
     <button mat-raised-button color="primary">Login</button>
   </mat-tab-group>
