Added chart, renamed some files...

--- a/src/app/components/coins/coins.component.html
+++ b/src/app/components/coins/coins.component.html
@@ -11,7 +11,7 @@
     Add coin
   </button>
 
-  <mat-tab-group (selectedTabChange)="onTabChange()" #tabGroup>
+  <mat-tab-group (selectedTabChange)="onTabChange(tabGroup.selectedIndex)" #tabGroup>
     <mat-tab *ngFor="let coinId of coinIds" [label]="coinId">
       <div class="header">
         <form class="header">
@@ -42,8 +42,17 @@
         </button>
       </div>
 
-      <!-- grafikon -->
-
+      <ngx-charts-line-chart
+        [results]="chartData"
+        [view]="view"
+        [xAxisLabel]="xAxisLabel"
+        [yAxisLabel]="yAxisLabel"
+        [showXAxisLabel]="showXAxisLabel"
+        [showYAxisLabel]="showYAxisLabel"
+        [xAxis]="xAxis"
+        [yAxis]="yAxis"
+      >
+      </ngx-charts-line-chart>
     </mat-tab>
     <mat-tab label="+"></mat-tab>
     <button mat-raised-button color="primary">Login</button>
