--- a/src/app/components/coins/coins.component.html
+++ b/src/app/components/coins/coins.component.html
@@ -2,7 +2,7 @@
   <div class="flex-justify-between">
     <h1>{{ loggedInAs }}</h1>
     <button
-      class="m-y-auto"
+      class="mb-auto"
       (click)="onLogout()"
       mat-raised-button
       color="primary"
@@ -15,58 +15,75 @@
     Add coin
   </button>
 
-  <mat-tab-group
-    (selectedTabChange)="onTabChange(tabGroup.selectedIndex)"
-    #tabGroup
-  >
-    <mat-tab *ngFor="let coinId of coinIds" [label]="coinId">
-      <div class="flex-justify-between">
-        <form class="mt-10">
-          <mat-form-field appearance="fill">
-            <mat-label>US Dollar</mat-label>
-            <input
-              [(ngModel)]="usdValue"
-              name="usdValue"
-              matInput
-              type="number"
-              (change)="usdValueChanged()"
-            />
-          </mat-form-field>
+  <div class="flex">
+    <mat-tab-group
+      class="w-100"
+      (selectedTabChange)="onTabChange(tabGroup.selectedIndex)"
+      #tabGroup
+    >
+      <mat-tab *ngFor="let coinId of coinIds" [label]="coinId">
+        <div class="flex-justify-between">
+          <form class="mt-10">
+            <mat-form-field appearance="fill">
+              <mat-label>US Dollar</mat-label>
+              <input
+                [(ngModel)]="usdValue"
+                name="usdValue"
+                matInput
+                type="number"
+                (change)="usdValueChanged()"
+              />
+            </mat-form-field>
 
-          <mat-form-field class="ml-20" appearance="fill">
-            <mat-label>{{ selectedCoin.name }}</mat-label>
-            <input
-              [(ngModel)]="coinValue"
-              name="coinValue"
-              matInput
-              type="number"
-              (change)="coinValueChanged()"
-            />
-          </mat-form-field>
-        </form>
-        <button
-          class="m-y-auto"
-          (click)="removeCoin(coinId)"
-          mat-raised-button
-          color="accent"
+            <mat-form-field class="ml-20" appearance="fill">
+              <mat-label>{{ selectedCoin.name }}</mat-label>
+              <input
+                [(ngModel)]="coinValue"
+                name="coinValue"
+                matInput
+                type="number"
+                (change)="coinValueChanged()"
+              />
+            </mat-form-field>
+          </form>
+          <button
+            class="mb-auto mt-10"
+            (click)="removeCoin(coinId)"
+            mat-raised-button
+            color="accent"
+          >
+            Remove
+          </button>
+        </div>
+
+        <ngx-charts-line-chart
+          [results]="chartData"
+          [view]="view"
+          [xAxisLabel]="xAxisLabel"
+          [yAxisLabel]="yAxisLabel"
+          [showXAxisLabel]="showXAxisLabel"
+          [showYAxisLabel]="showYAxisLabel"
+          [xAxis]="xAxis"
+          [yAxis]="yAxis"
         >
-          Remove
-        </button>
-      </div>
+        </ngx-charts-line-chart>
+      </mat-tab>
+      <!--<mat-tab label="+"></mat-tab>-->
+      <button mat-raised-button color="primary">Login</button>
+    </mat-tab-group>
+    <div class="div-300-500 ml-20">
+      <ul>
+        <li *ngFor="let coinId of coinIds">
+          <div>
+            {{ coinId }}
+          </div>
 
-      <ngx-charts-line-chart
-        [results]="chartData"
-        [view]="view"
-        [xAxisLabel]="xAxisLabel"
-        [yAxisLabel]="yAxisLabel"
-        [showXAxisLabel]="showXAxisLabel"
-        [showYAxisLabel]="showYAxisLabel"
-        [xAxis]="xAxis"
-        [yAxis]="yAxis"
-      >
-      </ngx-charts-line-chart>
-    </mat-tab>
-    <!--<mat-tab label="+"></mat-tab>-->
-    <button mat-raised-button color="primary">Login</button>
-  </mat-tab-group>
+          <div class="w-100">
+            <div>high</div>
+            <div>low</div>
+          </div>
+        </li>
+      </ul>
+    </div>
+  </div>
 </div>
