--- a/src/app/components/coins/coins.component.scss
+++ b/src/app/components/coins/coins.component.scss
@@ -7,9 +7,8 @@
   justify-content: space-between;
 }
 
-.m-y-auto {
+.mb-auto {
   margin-bottom: auto;
-  margin-top: auto;
 }
 
 .ml-20 {
@@ -18,4 +17,18 @@
 
 .mt-10 {
   margin-top: 10px;
+}
+
+.flex {
+  display: flex;
+}
+
+.div-300-500 {
+  width: 300px;
+  height: 500px;
+  border: solid 4px #8960cf;
+}
+
+.w-100 {
+  width: 100%;
 }
