--- a/src/app/components/coins/coin-details/coin-details.component.html
+++ b/src/app/components/coins/coin-details/coin-details.component.html
@@ -12,7 +12,7 @@
     </mat-form-field>
 
     <mat-form-field class="ml-20" appearance="fill">
-      <mat-label>{{ selectedCoin.name }}</mat-label>
+      <mat-label>{{ selectedCoin?.name }}</mat-label>
       <input
         [(ngModel)]="coinValue"
         name="coinValue"
