--- a/src/app/components/coins/coins-real-time/coins-real-time.component.html
+++ b/src/app/components/coins/coins-real-time/coins-real-time.component.html
@@ -1,18 +1,23 @@
-<div class="div-300-500 ml-20">
+<div class="table">
+  <h2 class="text-center table-header">BINANCE</h2>
   <table mat-table [dataSource]="tableData" class="w-100">
     <ng-container matColumnDef="coinId">
       <th mat-header-cell *matHeaderCellDef class="text-center w-30">Coin</th>
-      <td mat-cell *matCellDef="let coin" class="w-30">{{ coin.coinId }}</td>
+      <td mat-cell *matCellDef="let coin" class="text-center w-30">
+        {{ coin.coinId }}
+      </td>
     </ng-container>
     <ng-container matColumnDef="high">
       <th mat-header-cell *matHeaderCellDef class="text-center w-35">High</th>
-      <td mat-cell *matCellDef="let coin" class="green w-35">
+      <td mat-cell *matCellDef="let coin" class="text-center high w-35">
         {{ coin.high }}
       </td>
     </ng-container>
     <ng-container matColumnDef="low">
       <th mat-header-cell *matHeaderCellDef class="text-center w-35">Low</th>
-      <td mat-cell *matCellDef="let coin" class="red w-35">{{ coin.low }}</td>
+      <td mat-cell *matCellDef="let coin" class="text-center low w-35">
+        {{ coin.low }}
+      </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
