--- a/src/app/components/coins/coins.component.html
+++ b/src/app/components/coins/coins.component.html
@@ -11,10 +11,6 @@
     </button>
   </div>
 
-  <button (click)="addCoin()" mat-raised-button color="primary">
-    Add coin
-  </button>
-
   <div class="flex">
     <mat-tab-group class="tab-group">
       <mat-tab *ngFor="let coinId of coinIds" [label]="coinId">
@@ -23,9 +19,16 @@
           (removeCoin)="removeCoin($event)"
         ></app-coin-details>
       </mat-tab>
-      <!--<mat-tab label="+"></mat-tab>-->
+      <mat-tab disabled>
+        <ng-template mat-tab-label>
+          <button mat-icon-button (click)="addCoin()">+</button>
+        </ng-template>
+      </mat-tab>
       <button mat-raised-button color="primary">Login</button>
     </mat-tab-group>
-    <app-coins-real-time class="w-300px" [coinIds]="coinIds"></app-coins-real-time>
+    <app-coins-real-time
+      class="w-300px"
+      [coinIds]="coinIds"
+    ></app-coins-real-time>
   </div>
 </div>
