Plus icon for Add Coin button

--- a/src/app/components/coins/coins.component.html
+++ b/src/app/components/coins/coins.component.html
@@ -21,7 +21,9 @@
       </mat-tab>
       <mat-tab disabled>
         <ng-template mat-tab-label>
-          <button mat-icon-button (click)="addCoin()">+</button>
+          <button mat-icon-button (click)="addCoin()">
+            <mat-icon>add</mat-icon>
+          </button>
         </ng-template>
       </mat-tab>
       <button mat-raised-button color="primary">Login</button>
