--- a/src/app/components/coins/coins.component.html
+++ b/src/app/components/coins/coins.component.html
@@ -1,14 +1,17 @@
 <div class="m-10">
   <div class="flex-justify-between">
-    <h1>{{ loggedInAs }}</h1>
-    <button
-      class="mb-auto"
-      (click)="onLogout()"
-      mat-raised-button
-      color="primary"
-    >
-      Logout
-    </button>
+    <h1>Crypto Time</h1>
+    <div class="flex">
+      <h1>{{ loggedInAs }}</h1>
+      <button
+        class="mb-auto ml-20"
+        (click)="onLogout()"
+        mat-raised-button
+        color="primary"
+      >
+        Logout
+      </button>
+    </div>
   </div>
 
   <div class="flex">
