--- a/src/app/components/coins/coins.component.scss
+++ b/src/app/components/coins/coins.component.scss
@@ -1,4 +1,4 @@
-.m-10 {
+.page {
   margin: 10px;
 }
 
@@ -24,7 +24,7 @@
 }
 
 .tab-group {
-  width: calc(100vw - 300px - 2 * 10px - 20px - 2 * 2px - 18px);
+  width: calc(100vw - 300px - 2 * 10px - 20px - 2 * 2px);
 }
 
 .w-300px {
