--- a/src/app/components/coins/coin-details/coin-details.component.scss
+++ b/src/app/components/coins/coin-details/coin-details.component.scss
@@ -7,8 +7,8 @@
   margin-bottom: auto;
 }
 
-.ml-20 {
-  margin-left: 20px;
+.mr-20 {
+  margin-right: 20px;
 }
 
 .mt-10 {
@@ -17,4 +17,8 @@
 
 .chart-parent {
   display: grid;
+}
+
+.max-w-content {
+  max-width: fit-content;
 }
