removing last tab won't select + tab

--- a/src/app/components/coins/coins.component.html
+++ b/src/app/components/coins/coins.component.html
@@ -15,7 +15,8 @@
   </div>
 
   <div class="flex">
-    <mat-tab-group class="tab-group">
+    <mat-tab-group class="tab-group" [selectedIndex]="selectedTabIndex"
+    (selectedIndexChange)="tabChanged($event)">
       <mat-tab *ngFor="let coinId of coinIds" [label]="coinId">
         <app-coin-details
           [selectedCoinId]="coinId"
