--- a/src/app/components/coins/coins-real-time/coins-real-time.component.html
+++ b/src/app/components/coins/coins-real-time/coins-real-time.component.html
@@ -1,5 +1,9 @@
 <div class="table">
-  <h2 class="text-center table-header">BINANCE</h2>
+  <div class="table-header">
+    <h2 class="text-center header-title">BINANCE</h2>
+    <div class="text-center header-subtitle">SPOT USDT</div>
+  </div>
+
   <table mat-table [dataSource]="tableData" class="w-100">
     <ng-container matColumnDef="coinId">
       <th mat-header-cell *matHeaderCellDef class="text-center w-30">Coin</th>
