--- a/src/app/components/coins/coins-real-time/coins-real-time.component.html
+++ b/src/app/components/coins/coins-real-time/coins-real-time.component.html
@@ -1,4 +1,4 @@
-<div class="table">
+<div class="table-container">
   <div class="table-header">
     <h2 class="text-center header-title">BINANCE</h2>
     <div class="text-center header-subtitle">SPOT USDT</div>
