--- a/src/app/components/coins/coins-real-time/coins-real-time.component.html
+++ b/src/app/components/coins/coins-real-time/coins-real-time.component.html
@@ -4,7 +4,7 @@
     <div class="text-center header-subtitle">SPOT USDT</div>
   </div>
 
-  <table mat-table [dataSource]="tableData" class="w-100">
+  <table mat-table [dataSource]="tableItems" class="w-100">
     <ng-container matColumnDef="coinId">
       <th mat-header-cell *matHeaderCellDef class="text-center w-30">Coin</th>
       <td mat-cell *matCellDef="let coin" class="text-center w-30">
