--- a/src/app/components/coins/coins.component.html
+++ b/src/app/components/coins/coins.component.html
@@ -17,8 +17,7 @@
   <div class="flex">
     <mat-tab-group
       class="tab-group"
-      [selectedIndex]="selectedTabIndex"
-      (selectedIndexChange)="tabChanged($event)"
+      [(selectedIndex)]="selectedTabIndex"
     >
       <mat-tab *ngFor="let coinId of coinIds" [label]="coinId">
         <app-coin-details
